<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_feed">Global Feed</string>
    <string name="menu_aut">Login/SignUp</string>
    <string name="menu_signin">SignIn</string>
    <string name="menu_signup">SignUp</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="menu_auth">Logig/Signup</string>
    <string name="menu_my_feed">MyFeed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_settings">Settings</string>
    <string name="arg_articel_id">ARG_ARTICLE_ID</string>
</resources>